2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Save uuids of users that are authenticated with a method other than
	local file based (currently only ldap) in different locations.
	The API has not settled yet.

	* misc/openvas_auth.c: Added todo, some need for documentation.
	(openvas_user_uuid_method): New. Save uuids of users that are
	"remotely" authenticated in
	OPENVAS_STATE_DIR/users-remote/[method]/[user]/uuid.
	(openvas_authenticate_uuid): Use new function. Removed todo.
	(openvas_user_uuid): Clarified documentation.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_auth.h, misc/ldap_auth.c (ldap_authenticate): Changed
	signature to overcome compiler warning (likely to be solved
	differently soon).

	* misc/openvas_auth.c (openvas_authenticate_method): New function,
	exposing the authentication method that led to authentication success.
	(openvas_authenticate_uuid): Use new method, adjusted todo.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* MANIFEST: Added misc/ldap_auth module.

	* misc/CMakeLists.txt: Allow to enable ldap support at configure time
	- use -DBUILD_WITH_LDAP=ON to activate. Added check for openldap in
	that case, include ldap_auth module and add definition.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* base/CMakeLists.txt, hg/CMakeLists.txt, misc/CMakeLists.txt,
	nasl/CMakeLists.txt, omp/CMakeLists.txt: Unified formatting of
	CMakeLists to allow easier reading and extraction of macros.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* hg/hg_utils.c (hg_get_name_from_ip): Doc added. Formatting.

	* misc/bpf_share.h, misc/proctitle.c, nasl/nasl.c, omp/xml.c:
	Cosmetics.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* configure.in: Added check for libuuid.

	* configure: Regenerated.

2010-04-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
